Modified the comment description.

--- a/IntroToPython.ipynb
+++ b/IntroToPython.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# MODULE 1: VARIABLES AND DATA TYPES\n",
     "\n",
-    "# This is a comment in Python\n",
+    "# A # indicates a comment in Python. Comments are not executed by the interpreter.\n",
     "\n",
     "# 1.1 Basic Variable Assignment\n",
     "# Variables in Python can store different types of data.\n",
