--- a/IntroToPython.ipynb
+++ b/IntroToPython.ipynb
@@ -31,6 +31,7 @@
    ],
    "source": [
     "# MODULE 1: VARIABLES AND DATA TYPES\n",
+    "# My Copy\n",
     "\n",
     "# A # indicates a comment in Python. Comments are not executed by the interpreter.\n",
     "\n",
