--- a/AdvancedTopics/connect_to_db.ipynb
+++ b/AdvancedTopics/connect_to_db.ipynb
@@ -287,6 +287,49 @@
     "gdf = gpd.GeoDataFrame.from_postgis(query, conn, geom_col='geom')\n",
     "gdf.explore()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11665/1389531962.py:18: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Create connection to database\n",
+    "conn = psycopg2.connect(\n",
+    "    dbname=\"cosea_db\",  # Database name\n",
+    "    user=\"cosea_user\",  # Database user\n",
+    "    password=\"CoSeaIndex\",  # Database password\n",
+    "    host=\"pgsql.dataconn.net\",  # Database host\n",
+    "    port=\"5432\"  # Database port\n",
+    ")\n",
+    "\n",
+    "# Select data from table into geopandas data frame\n",
+    "query = \"SELECT * from \\\"2024\\\".tempasiannocomp\"\n",
+    "df = pd.read_sql(query, conn)\n",
+    "\n",
+    "\n",
+    "# INCLASS\n",
+    "sns_plot = sns.violinplot(x=\"prop_nocomputer\",  hue=\"di_asian_cat\", split=True, inner=\"quart\", gap=.1, data=df)\n",
+    "#sns.histplot(data=df, x=\"prop_nocomputer\", hue=\"di_asian_cat\", bins=30, kde=False, element=\"step\", stat=\"count\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
